@@ -14,6 +14,8 @@ import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeKind;
 import java.math.BigDecimal;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class MaxDecimalValueConstraint extends AbstractConstraint<DecimalMaxValue> {
@@ -49,7 +51,7 @@ public class MaxDecimalValueConstraint extends AbstractConstraint<DecimalMaxValu
 
     @Override
     protected List<Class> getSupportedDeclaredType() {
-        return List.of(BigDecimal.class);
+        return Collections.singletonList(BigDecimal.class);
     }
 
     @Override
