@@ -13,6 +13,8 @@ import com.squareup.javapoet.TypeName;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeKind;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class MinLengthConstraint extends AbstractConstraint<MinLength> {
@@ -48,7 +50,7 @@ public class MinLengthConstraint extends AbstractConstraint<MinLength> {
 
     @Override
     protected List<Class> getSupportedDeclaredType() {
-        return List.of(String.class);
+        return Collections.singletonList(String.class);
     }
 
     @Override
